Paymemt-form-final4- JJ

--- a/index.html
+++ b/index.html
@@ -43,18 +43,21 @@
          <!-- Forms for input and labels -->
         <div class="row">
           <div class="col-4">
-            <label for="inputCardNumber" 
+            <label for="inputCardNumber"
+            
             class="form-label">Card #</label>
             <input type="text" 
             id="inputCardNumber" 
-            class="form-control p-1" />
+            class="form-control p-1"
+            placeholder="xxxxxxxxxxxxxxxxxx"  />
           </div>
           <div class="col-3">
             <label for="inputCcv" 
             class="form-label">CCV</label>
             <input type="text" 
             id="inputCcv" 
-            class="form-control p-1" />
+            class="form-control p-1"
+            placeholder="0000" />
           </div>
 
           <div class="col-5">
@@ -64,7 +67,8 @@
             class="form-label d-flex">$
             <input type="text" 
             id="inputAmount" 
-            class="form-control align-items-center p-1" /></label>
+            class="form-control align-items-center p-1" 
+            placeholder="Amount"/></label>
             
           </div>
         </div>
