Payment-form-resubimi-Joao Jesus

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container-fluid border border-primary-light">
 
         <!-- Alert -->
-      <form action="/action_page.php">
+      <form>
         <div class="alert alert-danger p-2 mt-3" role="alert">
           Some fields are missing
         </div>
@@ -43,7 +43,7 @@
          <!-- Forms for input and labels -->
         <div class="row">
           <div class="col-4">
-          </form>
+          
             <label for="inputCardNumber"
                     class="form-label">Card #</label>
             <input type="text" 
@@ -65,7 +65,7 @@
             max="3"
             required />
           </div>
-        </form>
+        
           <div class="col-5">
             <label for="inputAmount" 
             class="form-label">Amount</label>
