--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- Alert -->
       <form>
         <div class="alert alert-danger p-2 mt-3" role="alert">
-          Some fields are missing
+          Please complete the required fields
         </div>
 
          <!-- Forms for input and labels -->
